# daemon_monitoring_project

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  docker.mk
.github/scripts/: test_commit_msg.py  test_pr.py
.github/workflows/: on_pr.yml  on_push.yml  test.yml
.github/workflows/scripts/: test_commit_msg.py
client/: Dockerfile
client/config/: init-docker.json  init.json
client/include/: client.hpp  cmd-ui.hpp  common-types.hpp  file-readers.hpp  http-syncer.hpp  managers.hpp  ui.hpp
client/src/: client.cpp  cmd-ui.cpp  file-readers.cpp  http-sync-client.cpp  main.cpp
client/tests/: test-client-unit.cpp
daemon/: Dockerfile
daemon/config/: config-server-a.json  config-server-b.json  config.json  log.txt
daemon/include/: collector-linux.hpp  collector-win.hpp  collector.hpp  daemon.hpp  models.hpp
daemon/metrics/server-a/: 1.json
daemon/src/: collector-linux.cpp  collector-win.cpp  collector.cpp  daemon.cpp  main.cpp
daemon/tests/: test-daemon-unit.cpp
docs/: specification.md
include/daemon_monitoring_project/: monitoring_client.hpp
include/daemon_monitoring_project/client/: UI.hpp  client.hpp
ks/: main.cpp
libs/: httplib.hpp
scripts/: test_commit_msg.py  test_pr.py
src/client/: CLI.cpp  CLI.hpp  main.cpp
src/client/include/: CLI.hpp  UI.hpp  cl-ui.hpp  client.hpp  tui.hpp  ui.hpp
src/client/src/: CLI.cpp  cl-ui.cpp  cl_ui.cpp  main.cpp  tui.cpp
storage/: Dockerfile
storage/config/: config.json
storage/metrics/server-a/: metric.json
storage/src/: main.cpp
storage/tests/: test-storage-unit.cpp
